# rp2040-template

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
